   RDM - #275.
 * Print a warning if no Logic device is found when using the RDM sniffer.
 * Added checks to the RDM tests to flag if non-printable characters are
   returned in any RDM strings - #262.
 * Added support for the P9813 family of SPI pixels.
 * Show dashes in the CLI DMX monitor if a universe has fewer than 512
   channels.
 * Added initial support for the MilInst 1-553 interface.

 Bugs:
 * Build fixes for OS X 10.9 - #265.
 * Build fixes for FreeBSD 10.0-BETA3.
 * Fix a bug in the RDM tests relating to Fail & Startup modes.
 * Fix the web and CLI UIs so they work if strings from RDM devices have
   unprintable characters in them - #263.
 * Fix a bug in the KiNet plugin - #276

 Internal:
 * Switched to using a custom generator for the C++ RPC Code.
 * Split PID data into 3 files.
 * Added more code documentation, cleaned up some new linter warnings.
 * Added the DISALLOW_COPY_AND_ASSIGN macro.
 * Refactor load average function out into system utils.
 * Switch the SPI RDM responders to using the core personality management code.
 * Renamed SetDecription(sic) to SetDescription in ola::Flags

22/10/2013 ola-0.8.33
 * Fix the build breakage when using XCode 5 (clang 500)
 * Save the SPI pixel count during shutdown
 * Fix E1.31 merge timeouts - #256
 * Fixed 2 bugs in the RDM responder tests.
 * Fix a bug where OLA wouldn't receive on ArtNet universe 0 - #260
 * Expose the source priority in the C++ API

29/9/2013 ola-0.8.32
 * Added more RDM responder tests to cover E1.37-1
 * Print the UID, manufacturer, model description, software version and 
   timestamp in the RDM test logs
 * Added pretty printing of slot info messages
 * Added support for new OSC formats
 * Added support for more than 4 ArtNet output ports
 * Added a simple ArtNet loadtest
 * Fixed a couple of bugs in the Dummy RDM responders
 * Added support for templates in the OSC target addresses.
 * Re-wrote the SPI backend with loads of new options.