@@ -87,9 +87,14 @@ void SetHelpString(const std::string &first_line,
                    const std::string &description);
 
 /**
- * @brief Print the usage text to stderr.
+ * @brief Print the usage text to stdout.
  */
 void DisplayUsage();
+
+/**
+ * @brief Print the version text to stdout.
+ */
+void DisplayVersion();
 
 /**
  * @brief Parses the command line flags up to the first non-flag value. argv is
