@@ -29,6 +29,10 @@ The directory containing the PID definitions.
 Sample rate in HZ.
 .IP "--syslog"
 Send to syslog rather than stderr.
+.IP "-v, --version"
+Print
+.B logic_rdm_sniffer
+version information
 .SH EXAMPLES
 .SS Display RDM messages from the Logic device.
 logic_rdm_sniffer -r
