@@ -24,8 +24,12 @@ The show file to playback.
 The show file to record data to.
 .IP "-u, --universes <string>"
 A comma separated list of universes to record
-.IP "-v, --verify <string>"
+.IP "--verify <string>"
 The show file to verify.
+.IP "-v, --version"
+Print
+.B ola_recorder
+version information
 .IP "--duration <uint32_t>"
 The length of time (seconds) to run for.
 .IP "--syslog"
