@@ -14,6 +14,10 @@ Display the help message.
 The DMX512 data to send, e.g. '1,240,0,255'
 .IP "-u, --universe <universe-id>"
 Id of the universe to send data for.
+.IP "-v, --version"
+Print
+.B ola_streaming_client
+version information
 .SH SEE ALSO
 .BR olad(1) ,
 .
