@@ -18,6 +18,10 @@ Display data from a previously captured file.
 Unpack RDM parameter data.
 .IP "-t, --timestamp"
 Include timestamps.
+.IP "-v, --version"
+Print
+.B rdmpro_sniffer
+version information
 .IP "-w, --savefile <string>"
 Also write the captured data to a file.
 .IP "--display-asc"
